--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "name": "EXPx2",
     "email": "expx2.dev@gmail.com",
     "url": ""
+  },
+  "dependencies": {
+    "com.unity.render-pipelines.universal": ">=12.0.0"
   }
 }
